another test commit

--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,7 @@
 %----------------------------------------------------------------------------------------
 
 % test edit
+% another test edit
 
 \documentclass[11pt, oneside]{Thesis} % The default font size and one-sided printing (no margin offsets)
 
