--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -59,3 +59,19 @@
 \newcommand{\PSI}{\mathbf{\Psi}}
 \newcommand{\PHI}{\mathbf{\Phi}}
 \newcommand{\OMEGA}{\mathbf{\Omega}}
+
+\newcommand{\y}{\mathbf{y}}
+\newcommand{\x}{\mathbf{x}}
+\newcommand{\f}{\mathbf{f}}
+\newcommand{\s}{\mathbf{s}}
+\newcommand{\z}{\mathbf{z}}
+\newcommand{\e}{\mathbf{e}}
+\newcommand{\g}{\mathbf{g}}
+\newcommand{\tee}{\mathbf{t}}
+\newcommand{\ve}{\mathbf{v}}
+
+
+\newcommand{\muu}{\boldsymbol{\mu}}
+\newcommand{\alphaa}{\boldsymbol{\alpha}}
+\newcommand{\thetaa}{\boldsymbol{\theta}}
+\newcommand{\betaa}{\boldsymbol{\beta}}
