--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,17 @@
 
 \input{Chapters/Chapter2}
 
+\input{Chapters/Chapter3}
+
+\input{Chapters/Chapter4}
+
+\input{Chapters/Chapter5}
+
+\input{Chapters/Chapter6}
+
+\input{Chapters/Chapter7}
+
+
 \input{Front & Back Matter/appendix}
 
 \input{Front & Back Matter/bibliography}
