--- a/Front & Back Matter/abbreviations.tex
+++ b/Front & Back Matter/abbreviations.tex
@@ -5,6 +5,10 @@
 \lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
 \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
 {
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere \\
-%\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
+GSP & Graph Signal Processing \\
+GSR & Graph Signal Reconstruction \\
+KGR & Kernel Graph Regression \\
+RNC & Regression with Network Cohesion \\
+GLS & Generalised Least Squares \\
+
 }
