--- a/Front & Back Matter/symbols.tex
+++ b/Front & Back Matter/symbols.tex
@@ -74,6 +74,7 @@ $\kappa(\cdot, \, \cdot)$ & A kernel function  \\[0.5cm]
 
 $(\cdot)^\top$ & Transpose of a matrix/vector \\
 $|| \cdot ||_\text{F}$ & The Frobenius norm \\
+$\tr{\cdot}$ & The trace of a square matrix \\
 $\vecc{\cdot}$ & Convert a matrix to a vector in column-major order \\
 $\text{vec}_{\, \text{RM}}(\cdot)$ & Convert a matrix to a vector in row-major order \\
 $\mat{\cdot}$ & Convert a vector to a matrix in column-major order \\
@@ -91,6 +92,6 @@ $\hat{(\cdot)}$ & The estimator of a matrix/vector/tensor \\
 $O(\cdot)$ & The runtime complexity \\
 $x_i$ & A vector element \\
 $\X_i$ & A matrix column \\
-$\X_{ij}$ & A vector element \\
+$\X_{ij}$ & A matrix element \\
 
  }
