--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,36 @@
+@article{Barik2015,
+ author = {Barik, Sasmita and Bapat, Ravindra B. and Pati, Sukanta},
+ doi = {10.2298/AADM150218006B},
+ journal = {Applicable Analysis and Discrete Mathematics},
+ pages = {39-58},
+ title = {ON THE LAPLACIAN SPECTRA OF PRODUCT GRAPHS},
+ url = {https://doi.org/10.2298/AADM150218006B},
+ volume = {9},
+ year = {2015}
+}
+
+@article{Fiedler1973,
+ author = {Fiedler, Miroslav},
+ doi = {10.21136/CMJ.1973.101168},
+ journal = {Czechoslovak Mathematical Journal},
+ pages = {298-305},
+ title = {Algebraic connectivity of graphs},
+ url = {https://doi.org/10.21136/CMJ.1973.101168},
+ volume = {23},
+ year = {1973}
+}
+
+@book{Imrich2000,
+ author = {Imrich, W. and Klav{\v{z}}ar, S.},
+ isbn = {9780471370390},
+ lccn = {99059409},
+ publisher = {Wiley},
+ series = {A Wiley-Interscience publication},
+ title = {Product Graphs: Structure and Recognition},
+ url = {https://books.google.co.uk/books?id=EOnuAAAAMAAJ},
+ year = {2000}
+}
+
 @book{Newman2018,
  author = {Newman, Mark},
  doi = {10.1093/oso/9780198805090.001.0001},
