graph product updates

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -9,6 +9,17 @@
  year = {2015}
 }
 
+@article{Barik2018,
+ author = {Barik, Sasmita and Kalita, D. and Pati, Sukanta and Sahoo, Gopinath},
+ doi = {10.1515/SPMA-2018-0027},
+ journal = {Special Matrices},
+ pages = {323 - 342},
+ title = {Spectra of Graphs Resulting from Various Graph Operations and Products: a Survey},
+ url = {https://doi.org/10.1515/SPMA-2018-0027},
+ volume = {6},
+ year = {2018}
+}
+
 @article{Fiedler1973,
  author = {Fiedler, Miroslav},
  doi = {10.21136/CMJ.1973.101168},
