--- a/Front & Back Matter/symbols.tex
+++ b/Front & Back Matter/symbols.tex
@@ -42,7 +42,8 @@ $\E$  & The prediction residuals \\
 $\F$  & A predicted graph signal \\ 
 $\G$  & A graph filter matrix \\
 $\HH$ & A Hessian matrix \\
-$\I$  & The identity matrix \\
+$\I_N$  & The $(N \times N)$ identity matrix \\
+$\J_N$  & An $(N \times N)$ matrix of ones \\
 $\K$  & A kernel (Gram) matrix \\
 $\LL$ & The graph Laplacian \\
 $\Ss$ & A binary selection matrix \\
