more on graph products

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -31,6 +31,22 @@
  year = {1973}
 }
 
+@incollection{Harzheim2005,
+ address = {New York},
+ author = {Harzheim, Egbert},
+ booktitle = {Ordered {Sets}},
+ doi = {10.1007/b104891},
+ isbn = {978-0-387-24219-4},
+ language = {en},
+ publisher = {Springer-Verlag},
+ series = {Advances in {Mathematics}},
+ title = {Chapter 4 - Products of orders},
+ url = {https://doi.org/10.1007/b104891},
+ urldate = {2023-01-30},
+ volume = {7},
+ year = {2005}
+}
+
 @book{Imrich2000,
  author = {Imrich, W. and Klav{\v{z}}ar, S.},
  isbn = {9780471370390},
@@ -40,6 +56,27 @@
  title = {Product Graphs: Structure and Recognition},
  url = {https://books.google.co.uk/books?id=EOnuAAAAMAAJ},
  year = {2000}
+}
+
+@article{Kaveh2011,
+ author = {Kaveh, Ali and Alinejad, Babak},
+ doi = {10.1007/S00707-011-0540-9},
+ journal = {Acta Mechanica},
+ pages = {331-350},
+ title = {Laplacian matrices of product graphs: applications in structural mechanics},
+ url = {https://doi.org/10.1007/S00707-011-0540-9},
+ volume = {222},
+ year = {2011}
+}
+
+@book{Mieghem2010,
+ author = {Mieghem, Piet van},
+ doi = {10.1017/CBO9780511921681},
+ place = {Cambridge},
+ publisher = {Cambridge University Press},
+ title = {Graph Spectra for Complex Networks},
+ url = {https://doi.org/10.1017/CBO9780511921681},
+ year = {2010}
 }
 
 @book{Newman2018,
@@ -63,6 +100,18 @@
  url = {https://doi.org/10.1109/JPROC.2018.2820126},
  volume = {106},
  year = {2018}
+}
+
+@article{Sayama2016,
+ author = {Sayama, Hiroki},
+ doi = {10.1016/j.dam.2015.12.006},
+ issn = {0166-218X},
+ journal = {Discrete Applied Mathematics},
+ pages = {160-170},
+ title = {Estimation of Laplacian spectra of direct and strong product graphs},
+ url = {https://doi.org/10.1016/j.dam.2015.12.006},
+ volume = {205},
+ year = {2016}
 }
 
 @article{Shuman2013,
