--- a/Front & Back Matter/symbols.tex
+++ b/Front & Back Matter/symbols.tex
@@ -53,14 +53,15 @@ $\X$  & Data matrix of explanatory variables \\
 $\Y$  & (Partially) observed graph signal  \\
 $\LAM$ & A diagonal eigenvalue matrix \\
 $\SIG$ & A covariance matrix\\
-$\PHI$ & A generic eigenvector matrix \\
-$\PSI$ & A generic eigenvector matrix \\
+$\PHI, \PSI$ & Generic eigenvector matrices \\
 $\OMEGA$ & Log marginal variance matrix \\[0.5cm]
 
 
 \textbf{Vectors/tensors} \\[0.2cm]
 
+$\mathbf{1}_N$ &  A length-$N$ vector of ones \\
 $\e$ &  The prediction residuals \\
+$\e_i$ &  The $i$-th unit basis vector \\
 $\f$ &  The predicted graph signal \\
 $\s$ &  A binary selection vector/tensor \\
 $\x$ & A vector of explanatory variables \\
@@ -69,7 +70,6 @@ $\alphaa$ & A flexible intercept vector/tensor \\
 $\betaa$ & A graph filter parameter vector \textit{or} vector of regression coefficients \\
 $\thetaa$ & A aggregated coefficient vector $[ \alphaa^\top, \, \betaa^\top ]^\top$ \\[0.5cm]
 
-\newpage
 
 
 \textbf{Functions} \\[0.2cm]
