--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -75,3 +75,11 @@
 \newcommand{\alphaa}{\boldsymbol{\alpha}}
 \newcommand{\thetaa}{\boldsymbol{\theta}}
 \newcommand{\betaa}{\boldsymbol{\beta}}
+
+
+\newcommand{\note}[2]{\begin{tcolorbox}[colback=gray!5!white,
+    colframe=gray!50!black,
+    colbacktitle=gray!75!black,
+    title=#1]
+    #2
+\end{tcolorbox}}
