--- a/Setup/packages.tex
+++ b/Setup/packages.tex
@@ -2,10 +2,11 @@
 
 
 \usepackage{algpseudocode,
-			algorithm}
+			algorithm, 
+			multirow}
 
 \usepackage[table]{xcolor}
 
-
+\usepackage[most]{tcolorbox}
 
 \hypersetup{urlcolor=blue, colorlinks=true}	
