--- a/Front & Back Matter/abbreviations.tex
+++ b/Front & Back Matter/abbreviations.tex
@@ -6,6 +6,8 @@
 \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
 {
 GSP & Graph Signal Processing \\
+GFT & Graph Fourier Transform \\
+IGFT & Inverse Graph Fourier Transform \\
 GSR & Graph Signal Reconstruction \\
 KGR & Kernel Graph Regression \\
 RNC & Regression with Network Cohesion \\
