--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -75,11 +75,12 @@
 \newcommand{\alphaa}{\boldsymbol{\alpha}}
 \newcommand{\thetaa}{\boldsymbol{\theta}}
 \newcommand{\betaa}{\boldsymbol{\beta}}
-
+\newcommand{\lambdaa}{\boldsymbol{\lambda}}
 
 \newcommand{\note}[2]{\begin{tcolorbox}[colback=gray!5!white,
     colframe=gray!50!black,
     colbacktitle=gray!75!black,
+    breakable,
     title=#1]
     #2
 \end{tcolorbox}}
