--- a/Front & Back Matter/symbols.tex
+++ b/Front & Back Matter/symbols.tex
@@ -40,8 +40,8 @@ $\A$  & The graph adjacency matrix \\
 $\D$  & A diagonal matrix \\
 $\E$  & The prediction residuals \\
 $\F$  & A predicted graph signal \\ 
-$\G$  & A graph filter matrix \\
-$\HH$ & A Hessian matrix \\
+$\G$  & A spectral scaling matrix \\
+$\HH$ & A graph filter \textit{or} Hessian matrix \\
 $\I_N$  & The $(N \times N)$ identity matrix \\
 $\J_N$  & An $(N \times N)$ matrix of ones \\
 $\K$  & A kernel (Gram) matrix \\
