--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -31,6 +31,18 @@
  year = {1973}
 }
 
+@article{Grassi2018,
+ author = {Grassi, Francesco and Loukas, Andreas and Perraudin, Nathanaël and Ricaud, Benjamin},
+ doi = {10.1109/TSP.2017.2775589},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {3},
+ pages = {817-829},
+ title = {A Time-Vertex Signal Processing Framework: Scalable Processing and Meaningful Representations for Time-Series on Graphs},
+ url = {https://doi.org/10.1109/TSP.2017.2775589},
+ volume = {66},
+ year = {2018}
+}
+
 @incollection{Harzheim2005,
  address = {New York},
  author = {Harzheim, Egbert},
@@ -58,6 +70,24 @@
  year = {2000}
 }
 
+@article{Isufi2017,
+ author = {Isufi, Elvin and Loukas, Andreas and Simonetto, Andrea and Leus, Geert},
+ doi = {10.1109/TSP.2016.2614793},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {2},
+ pages = {274-288},
+ title = {Autoregressive Moving Average Graph Filtering},
+ url = {https://doi.org/10.1109/TSP.2016.2614793},
+ volume = {65},
+ year = {2017}
+}
+
+@inproceedings{Jiang2012,
+ author = {Jiang, Jiaqi},
+ title = {Introduction to spectral graph theory},
+ year = {2012}
+} 
+
 @article{Kaveh2011,
  author = {Kaveh, Ali and Alinejad, Babak},
  doi = {10.1007/S00707-011-0540-9},
@@ -67,6 +97,18 @@
  url = {https://doi.org/10.1007/S00707-011-0540-9},
  volume = {222},
  year = {2011}
+}
+
+@inproceedings{Loukas2016,
+ author = {Loukas, Andreas and Foucard, Damien},
+ booktitle = {2016 IEEE Global Conference on Signal and Information Processing (GlobalSIP)},
+ doi = {10.1109/GlobalSIP.2016.7905861},
+ number = {},
+ pages = {346-350},
+ title = {Frequency analysis of time-varying graph signals},
+ url = {https://doi.org/10.1109/GlobalSIP.2016.7905861},
+ volume = {},
+ year = {2016}
 }
 
 @book{Mieghem2010,
