added proof for F|Y posterior

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -82,11 +82,11 @@
  year = {2017}
 }
 
-@inproceedings{Jiang2012,
+@misc{Jiang2012,
  author = {Jiang, Jiaqi},
  title = {Introduction to spectral graph theory},
  year = {2012}
-} 
+}  
 
 @article{Kaveh2011,
  author = {Kaveh, Ali and Alinejad, Babak},
