--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -2,20 +2,20 @@
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
 
 
-\newcommand{\vecc}[1]{\text{vec}(#1)}
-\newcommand{\Vecc}[1]{\text{vec}\big(#1\big)}
-\newcommand{\VECC}[1]{\text{vec}\Big(#1\Big)}
-\newcommand{\mat}[1]{\text{mat}(#1)}
-\newcommand{\Mat}[1]{\text{mat}\big(#1\big)}
-\newcommand{\MAT}[1]{\text{mat}\Big(#1\Big)}
-\newcommand{\diag}[1]{\text{diag}(#1)}
-\newcommand{\Diag}[1]{\text{diag}\big(#1\big)}
-\newcommand{\DIAG}[1]{\text{diag}\Big(#1\Big)}
-\newcommand{\diagi}[1]{\text{diag}^{-1}(#1)}
-\newcommand{\Diagi}[1]{\text{diag}^{-1}\big(#1\big)}
-\newcommand{\DIAGi}[1]{\text{diag}^{-1}\Big(#1\Big)}
-\newcommand{\tr}[1]{\text{tr}\big(#1\big)}
-\newcommand{\Tr}[1]{\text{tr}\Big(#1\Big)}
+\newcommand{\vecc}[1]{\text{\textup{vec}}(#1)}
+\newcommand{\Vecc}[1]{\text{\textup{vec}}\big(#1\big)}
+\newcommand{\VECC}[1]{\text{\textup{vec}}\Big(#1\Big)}
+\newcommand{\mat}[1]{\text{\textup{mat}}(#1)}
+\newcommand{\Mat}[1]{\text{\textup{mat}}\big(#1\big)}
+\newcommand{\MAT}[1]{\text{\textup{mat}}\Big(#1\Big)}
+\newcommand{\diag}[1]{\text{\textup{diag}}(#1)}
+\newcommand{\Diag}[1]{\text{\textup{diag}}\big(#1\big)}
+\newcommand{\DIAG}[1]{\text{\textup{diag}}\Big(#1\Big)}
+\newcommand{\diagi}[1]{\text{\textup{diag}}^{-1}(#1)}
+\newcommand{\Diagi}[1]{\text{\textup{diag}}^{-1}\big(#1\big)}
+\newcommand{\DIAGi}[1]{\text{\textup{diag}}^{-1}\Big(#1\Big)}
+\newcommand{\tr}[1]{\text{\textup{trf}}\big(#1\big)}
+\newcommand{\Tr}[1]{\text{\textup{trf}}\Big(#1\Big)}
 
 \newcommand{\aand}{\quad \text{and} \quad}
 \newcommand{\orr}{\quad \text{or} \quad}
