added more to chapter 4

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -20,6 +20,17 @@
  year = {2018}
 }
 
+@book{Bhatia1997,
+ address = {New York},
+ author = {Bhatia, Rajendra},
+ isbn = {978-0-387-94846-1},
+ number = {169},
+ publisher = {Springer},
+ series = {Graduate texts in mathematics},
+ title = {Matrix analysis},
+ year = {1997}
+}
+
 @article{Fiedler1973,
  author = {Fiedler, Miroslav},
  doi = {10.21136/CMJ.1973.101168},
@@ -43,6 +54,18 @@
  year = {2018}
 }
 
+@article{Grote1997,
+ author = {Grote, Marcus J. and Huckle, Thomas},
+ doi = {10.1137/S1064827594276552},
+ journal = {SIAM Journal on Scientific Computing},
+ number = {3},
+ pages = {838-853},
+ title = {Parallel Preconditioning with Sparse Approximate Inverses},
+ url = {https://doi.org/10.1137/S1064827594276552},
+ volume = {18},
+ year = {1997}
+}
+
 @incollection{Harzheim2005,
  address = {New York},
  author = {Harzheim, Egbert},
@@ -57,6 +80,17 @@
  urldate = {2023-01-30},
  volume = {7},
  year = {2005}
+}
+
+@article{Hestenes1952,
+ author = {Hestenes, Magnus R. and Stiefel, Eduard},
+ doi = {10.6028/JRES.049.044},
+ journal = {Journal of research of the National Bureau of Standards},
+ pages = {409-435},
+ title = {Methods of conjugate gradients for solving linear systems},
+ url = {https://doi.org/10.6028/JRES.049.044},
+ volume = {49},
+ year = {1952}
 }
 
 @book{Imrich2000,
@@ -86,7 +120,7 @@
  author = {Jiang, Jiaqi},
  title = {Introduction to spectral graph theory},
  year = {2012}
-}  
+}
 
 @article{Kaveh2011,
  author = {Kaveh, Ali and Alinejad, Babak},
@@ -97,6 +131,31 @@
  url = {https://doi.org/10.1007/S00707-011-0540-9},
  volume = {222},
  year = {2011}
+}
+
+@book{Kelley1995,
+ author = {Kelley, C. T.},
+ doi = {10.1137/1.9781611970944.ch1},
+ publisher = {Society for Industrial and Applied Mathematics},
+ title = {{Iterative Methods for Linear and Nonlinear Equations}},
+ url = {https://doi.org/10.1137/1.9781611970944.ch1},
+ year = {1995}
+}
+
+@inproceedings{LeMagoarou2016,
+ address = {Shanghai},
+ author = {LeMagoarou, Luc and Gribonval, Remi},
+ booktitle = {2016 {IEEE} {International} {Conference} on {Acoustics}, {Speech} and {Signal} {Processing} ({ICASSP})},
+ doi = {10.1109/ICASSP.2016.7472591},
+ isbn = {978-1-4799-9988-0},
+ language = {en},
+ month = {March},
+ pages = {4811--4815},
+ publisher = {IEEE},
+ title = {Are there approximate fast fourier transforms on graphs?},
+ url = {https://doi.org/10.1109/ICASSP.2016.7472591},
+ urldate = {2023-02-07},
+ year = {2016}
 }
 
 @inproceedings{Loukas2016,
@@ -142,6 +201,20 @@
  url = {https://doi.org/10.1109/JPROC.2018.2820126},
  volume = {106},
  year = {2018}
+}
+
+@book{Saad2003,
+ author = {Saad, Yousef},
+ doi = {10.1137/1.9780898718003},
+ edition = {Second},
+ isbn = {978-0-89871-534-7 978-0-89871-800-3},
+ language = {en},
+ month = {January},
+ publisher = {Society for Industrial and Applied Mathematics},
+ title = {Iterative {Methods} for {Sparse} {Linear} {Systems}},
+ url = {https://doi.org/10.1137/1.9780898718003},
+ urldate = {2023-01-03},
+ year = {2003}
 }
 
 @article{Sayama2016,
