--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -14,8 +14,8 @@
 \newcommand{\diagi}[1]{\text{\textup{diag}}^{-1}(#1)}
 \newcommand{\Diagi}[1]{\text{\textup{diag}}^{-1}\big(#1\big)}
 \newcommand{\DIAGi}[1]{\text{\textup{diag}}^{-1}\Big(#1\Big)}
-\newcommand{\tr}[1]{\text{\textup{trf}}\big(#1\big)}
-\newcommand{\Tr}[1]{\text{\textup{trf}}\Big(#1\Big)}
+\newcommand{\tr}[1]{\text{\textup{tr}}\big(#1\big)}
+\newcommand{\Tr}[1]{\text{\textup{tr}}\Big(#1\Big)}
 
 \newcommand{\aand}{\quad \text{and} \quad}
 \newcommand{\orr}{\quad \text{or} \quad}
