--- a/Front & Back Matter/abbreviations.tex
+++ b/Front & Back Matter/abbreviations.tex
@@ -12,5 +12,8 @@ GSR & Graph Signal Reconstruction \\
 KGR & Kernel Graph Regression \\
 RNC & Regression with Network Cohesion \\
 GLS & Generalised Least Squares \\
+DCT & Discrete Cosine Transform \\
+FCT & Fast Cosine Transform \\
+FFT & Fast Fourier Transform \\
 
 }
