--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -81,6 +81,8 @@
     colframe=gray!50!black,
     colbacktitle=gray!75!black,
     breakable,
+    % float=htb,
+    % capture=hbox,
     title=#1]
     #2
 \end{tcolorbox}}
