--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,15 @@
+@article{Ahmed1974,
+ author = {Ahmed, N. and Natarajan, T. and Rao, K.R.},
+ doi = {10.1109/T-C.1974.223784},
+ journal = {IEEE Transactions on Computers},
+ number = {1},
+ pages = {90-93},
+ title = {Discrete Cosine Transform},
+ url = {https://doi.org/10.1109/T-C.1974.223784},
+ volume = {C-23},
+ year = {1974}
+}
+
 @article{Barik2015,
  author = {Barik, Sasmita and Bapat, Ravindra B. and Pati, Sukanta},
  doi = {10.2298/AADM150218006B},
@@ -29,6 +41,17 @@
  series = {Graduate texts in mathematics},
  title = {Matrix analysis},
  year = {1997}
+}
+
+@article{Cooley1965,
+ author = {Cooley, James W. and Tukey, John W.},
+ doi = {10.1090/S0025-5718-1965-0178586-1},
+ journal = {Mathematics of Computation},
+ pages = {297-301},
+ title = {An algorithm for the machine calculation of complex Fourier series},
+ url = {https://doi.org/10.1090/S0025-5718-1965-0178586-1},
+ volume = {19},
+ year = {1965}
 }
 
 @article{Fiedler1973,
@@ -170,6 +193,18 @@
  year = {2016}
 }
 
+@article{Makhoul1980,
+ author = {Makhoul, J.},
+ doi = {10.1109/TASSP.1980.1163351},
+ journal = {IEEE Transactions on Acoustics, Speech, and Signal Processing},
+ number = {1},
+ pages = {27-34},
+ title = {A fast cosine transform in one and two dimensions},
+ url = {https://doi.org/10.1109/TASSP.1980.1163351},
+ volume = {28},
+ year = {1980}
+}
+
 @book{Mieghem2010,
  author = {Mieghem, Piet van},
  doi = {10.1017/CBO9780511921681},
@@ -201,6 +236,16 @@
  url = {https://doi.org/10.1109/JPROC.2018.2820126},
  volume = {106},
  year = {2018}
+}
+
+@book{Rao1990,
+ author = {Rao, K.R. and Yip, P.},
+ doi = {10.1016/C2009-0-22279-3},
+ isbn = {9781493301829},
+ publisher = {Elsevier Science \& Technology Books},
+ title = {Discrete Cosine Transform: Algorithms, Advantages, Applications},
+ url = {https://doi.org/10.1016/C2009-0-22279-3},
+ year = {1990}
 }
 
 @book{Saad2003,
